# sqlalchemy-es

./: .gitignore  README.md  buildew  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
sqlalchemy/dialects/es/: __init__.py  sqlalchemy.py
sqlalchemy/dialects/es/aws/: __init__.py  sqlalchemy.py
sqlalchemy_dialects/es/: __init__.py  api.py  baseapi.py  basesqlalchemy.py  const.py  exceptions.py  sqlalchemy.py
sqlalchemy_dialects/es/aws/: __init__.py  api.py  sqlalchemy.py
tests/: _0_fixtures_test.py  dbapi_test.py  sqlalchemy_test.py
