[metadata]
name = sqlalchemy-es
summary = SQLAlchemy dialect for Elasticsearch
description-file = README.md
author = 
author-email = 
license = Apache License, Version 2.0

[mypy]
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-sqlalchemy.dialects.es.*]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = false

[mypy-sqlalchemy.dialects.es.aws.*]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = false
